# QTFVGenerator

./: README.md
FVGeneratorV2/: CMakeLists.txt  createcustomerdialog.cpp  createcustomerdialog.ui  createfvdialog.cpp  createfvdialog.ui  createitemdialog.cpp  createitemdialog.ui  mainwindow.cpp  mainwindow.ui
FVGeneratorV2/data/: customers.csv  items.csv  producenci.csv
FVGeneratorV2/include/: address.h  createcustomerdialog.h  createfvdialog.h  createitemdialog.h  customer.h  database.h  fvgenerator.h  fvorder.h  item.h  lastid.h  loadingException.h  mainwindow.h  person.h  producent.h
FVGeneratorV2/src/: address.cpp  customer.cpp  database.cpp  fvorder.cpp  item.cpp  lastid.cpp  main.cpp  person.cpp  producent.cpp
